# pytest-datadir-nng

./: README.md  README.rst  pyproject.toml  pytest_datadir_nng.py  setup.py  tests.py  tox.ini
.github/workflows/: default.yml
pytest_datadir_nng/: __init__.py
tests/: test_datadir.py
